<resources>
    <string name="app_name">ToDo_For_BlockChain</string>

    <string name="home_fragment">Home Fragment</string>
    <string name="sport_fragment">Sport Fragment</string>
    <string name="movie_fragment">Movie Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LogIn</string>
    <string name="address">Address</string>
    <string name="private_key">Private Key</string>
    <string name="add_task">Add_Task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="reward">Reward</string>
    <string name="add">ADD</string>
    <string name="to">to</string>
    <string name="todo">ToDo</string>
    <string name="_1000">1000</string>
    <string name="star">****</string>
    <string name="logout">Logout</string>
    <string name="remember_me">Remember me.</string>
</resources>