<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/include"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:minHeight="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_task"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include"
        android:contentDescription="@string/add_task" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="12dp"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:inputType="text"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="24dp"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/description"
            android:lines="3"
            android:maxLines="3"
            android:gravity="top"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:inputType="text"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/et_reward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="60dp"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/reward"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:inputType="number"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="60dp"
            android:paddingVertical="8dp"
            android:layout_marginHorizontal="12dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/add"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="Autofill" />

    </LinearLayout>
    <ProgressBar
        android:id="@+id/pb_add"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#44000000"
        android:padding="140dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>