<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".LogActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="80dp"
        android:layout_marginHorizontal="24dp"
        android:elevation="25dp"
        app:cardCornerRadius="50dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="24dp"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@color/purple_700"
                android:text="@string/login"
                android:textAlignment="center"
                />
            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="12dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/address"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:inputType="text"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/et_private_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="12dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/private_key"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:inputType="text"
                tools:ignore="Autofill" />

            <CheckBox
                android:id="@+id/cb_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/remember_me"/>

            <Button
                android:id="@+id/btn_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="32dp"
                android:paddingVertical="8dp"
                android:layout_marginHorizontal="12dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/login"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="Autofill" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/pb_log"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#44000000"
        android:padding="140dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>